datawave-sql-federation-aws/k8s/namespace.yaml
# Author: Sunil Poricha - Cloud SRE - Technical Assessment 2026
apiVersion: v1
kind: Namespace
metadata:
  name: sql-federation
  labels:
    project: datawave-sql-federation
    managed-by: terraform-and-jenkins
